--- a/listing.html
+++ b/listing.html
@@ -726,8 +726,8 @@
                 </div>
 
 
-                <div class="properties mb-3">
-                    <div class="d-flex align-items-center mb-5">
+                <div class="properties mb-3 ">
+                    <div class="d-flex align-items-center mb-5 z-n1">
                         <span>6 search results</span>
                         <div class="dropdown flex-grow-1 d-flex justify-content-end">
                             <button class="btn btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown"
